@@ -1,5 +1,5 @@
 Package: umx
-Version: 2.8.0
+Version: 2.8.1
 Date: 2018-06-20
 Title: Structural Equation and Twin Modeling in R
 Authors@R: c(person("Timothy C", "Bates", role = c("aut", "cre"),
